fix(ant): use ant-prefix in class

--- a/packages/antd/src/array-cards/style.less
+++ b/packages/antd/src/array-cards/style.less
@@ -8,7 +8,7 @@
   margin-bottom: 10px !important;
 }
 
-.ant-card-extra {
+.@{ant-prefix}-card-extra {
   .@{array-base-prefix-cls}-copy {
     margin-left: 6px;
   }
